--- a/css/cartodb-leaflet.css
+++ b/css/cartodb-leaflet.css
@@ -1,21 +1,110 @@
 /*other stuff*/
-
+/*
 .leaflet-popup-content label {width:100%; margin:0; padding:0; font:bold 12px Arial; color:#333333;}
-.leaflet-popup-content p {width:100%; margin:2px 0 3px!important; padding:0; font:normal 12px Arial; color:#666666;}
+.leaflet-popup-content p {width:100%; margin:2px 0 3px!important; padding:0; font:normal 12px Arial; color:#666666;}*/
 
 /* CartoDB popup*/
-div.cartodb-popup {position:absolute; display:block; width:214px; padding:0; -webkit-transform: translateZ(10000px);/*Hack for Safari*/}
+div.cartodb-popup {
+	position:absolute; display:block; width:320px; padding:0; 
+	-webkit-transform: translateZ(10000px);/*Hack for Safari*/
+	font-weight: 400;
+}
 div.cartodb-popup:hover {cursor:default;}
-div.cartodb-popup a.cartodb-popup-close-button {position:absolute; right:3px; top:2px; width:22px; height:15px; padding:4px 0 3px 0; text-align:center; font:bold 15px "Helvetica",Arial; color:#666666; text-decoration:none; line-height:15px; background:none; text-indent:0; overflow:visible}
-div.cartodb-popup a.cartodb-popup-close-button:hover {color:#333333; cursor:pointer}
-div.cartodb-popup div.cartodb-popup-content-wrapper {width:186px; padding:25px 18px 5px 10px; margin:0; background:url('../img/sprite.png') 0 top; border:none; box-shadow:none; border-radius:0; -moz-border-radius:0; -webkit-border-radius:0}
-div.cartodb-popup div.cartodb-popup-content {width:186px; max-height:200px; padding:0; margin:0; overflow-y:auto; overflow-x:hidden}
+div.cartodb-popup a.cartodb-popup-close-button {
+	position:absolute; 
+	right: -21px; 
+	top: -21px; 
+	width: 42px; 
+	height: 42px; 
+	/*color: transparent; */
+	text-decoration:none; 
+	line-height:15px; 
+	background:none; 
+	text-indent: -9999px; 
+	overflow:visible;
+	background:url('../img/closeX.png') no-repeat right top;
+	cursor: pointer;
+	display: block;
+}
+div.cartodb-popup div.cartodb-popup-content-wrapper {
+	/*width:186px; */
+	padding: 15px; 
+	margin:0; 
+	border: 1px solid #4DEBC4;
+	/*background:url('../img/sprite.png') 0 top; */
+	
+	border-radius: 6px; 
+	-moz-border-radius: 6px; 
+	-webkit-border-radius: 6px; 
+	box-shadow: 0px 0px 15px #4DEBC4;
+	/*border:none; */
+	/*
+	box-shadow:none; 
+	border-radius:0; 
+	-moz-border-radius:0; -webkit-border-radius:0*/
+	background: #242d2d; /* Old browsers */
+	background: -moz-radial-gradient(center, ellipse cover,  #242d2d 0%, #000000 100%); /* FF3.6+ */
+	background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,#242d2d), color-stop(100%,#000000)); /* Chrome,Safari4+ */
+	background: -webkit-radial-gradient(center, ellipse cover,  #242d2d 0%,#000000 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-radial-gradient(center, ellipse cover,  #242d2d 0%,#000000 100%); /* Opera 12+ */
+	background: -ms-radial-gradient(center, ellipse cover,  #242d2d 0%,#000000 100%); /* IE10+ */
+	background: radial-gradient(ellipse at center,  #242d2d 0%,#000000 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#242d2d', endColorstr='#000000',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+
+}
+div.cartodb-popup div.cartodb-popup-content {
+	font-family: 'Cabin', sans-serif;
+	/*width:186px; */
+	max-height: 200px; 
+	padding:0; 
+	margin:0; 
+	overflow-y:auto; 
+	overflow-x:hidden}
 div.cartodb-popup div.cartodb-popup-content .jspTrack {background: #dddddd;}
 div.cartodb-popup div.cartodb-popup-content .jspDrag {background: #999999;}
 div.cartodb-popup div.cartodb-popup-content .jspHover, div.cartodb-popup div.cartodb-popup-top-content .jspActive {background:#666666}
-div.cartodb-popup div.cartodb-popup-content label {display:block; width:auto; padding:0 0 0 5px; font:normal 11px Arial; color:#B3B3B3; text-shadow:0 1px white}
-div.cartodb-popup div.cartodb-popup-content p {display:block; width:170px; max-width:170px; padding:2px 4px!important; margin:2px 0 7px!important; font:bold 11px 'Helvetica',Arial; color:#666666; border:none; background:none; text-shadow:0 1px white;}
+div.cartodb-popup div.cartodb-popup-content label {
+	display: block; 
+	width:auto; 
+	padding: 0px; 
+	font: normal 14px; 
+	color: #ddd; 
+	text-shadow: 0 2px black;
+	font-family: 'Cabin', sans-serif;
+}
+div.cartodb-popup div.cartodb-popup-content p {
+	display:block; 
+	padding: 0px !important; 
+	margin: 2px 0 7px 0px !important; 
+	font-size: 16px; 
+	font-weight: 700;
+	color: #eee; 
+	border:none; 
+	background:none; 
+	text-shadow: 0 2px black;
+	width: 240px;
+	max-width: 240px;
+	font-family: 'Cabin', sans-serif;
+}
+
+div.cartodb-popup div.cartodb-popup-content h3,
+div.cartodb-popup div.cartodb-popup-content h5 {
+	color: #eee;
+	margin: 0px 0px 8px 0px;
+	text-shadow: 0 2px black;
+	line-height: 1.2 !important;
+	max-width: 240px;
+	font-size: 16pt;
+}
+div.cartodb-popup div.cartodb-popup-content h3 {
+	color: #FF6600;
+	font-size: 20pt;
+	margin: 0px 0px 8px 0px;
+}
 div.cartodb-popup div.cartodb-popup-content p.empty {font-weight:normal; font-style:italic; color:#b7b7b7;}
-div.cartodb-popup div.cartodb-popup-tip-container {width:180px; height:36px; padding:11px 16px 10px 10px; margin:0; background:url('../img/sprite.png') no-repeat right top;}
+div.cartodb-popup div.cartodb-popup-tip-container {
+	width:25px; height:50px; padding:11px 16px 10px 71px; margin:0; background:url('../img/marker.png') no-repeat right top;
+}
+/*
 div.cartodb-popup div.cartodb-popup-tip-container label {float:left; margin:5px 0 0 3px; font:normal 11px Arial; color:#B3B3B3; text-shadow:0 1px white}
-div.cartodb-popup div.cartodb-popup-tip-container label strong {font:bold 11px 'Helvetica',Arial; color:#666666; text-shadow:0 1px white;}
+div.cartodb-popup div.cartodb-popup-tip-container label strong {font:bold 11px 'Helvetica',Arial; color:#666666; text-shadow:0 1px white;}*/
